unpackaged/main/default/objects/Location__c/Location__c.object-meta.xml
<CustomObject>
    <description>Parent Account Offices/Locations</description>
    <label>ATS Location</label>
    <nameField>
        <label>Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ATS Locations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>