unpackaged/main/default/objects/Location__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The account tied to this location</description>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please Select a Parent Account for this Location (ie Advanced Turf Solutions)</errorMessage>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Parent</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Locations</relationshipName>
    <type>Lookup</type>
</CustomField>