unpackaged/main/default/objects/Location__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Is the location actively being used</description>
    <label>Active?</label>
    <type>Checkbox</type>
</CustomField>