unpackaged/main/default/objects/Location__c/fields/Asst_Facility_Manager__c.field-meta.xml
<CustomField>
    <fullName>Asst_Facility_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Assistant Facility Manager of this Location (if Warehouse)</description>
    <inlineHelpText>The Assistant Facility Manager of this Location (if Warehouse)</inlineHelpText>
    <label>Asst Facility Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ATS_Locations_Asst</relationshipName>
    <type>Lookup</type>
</CustomField>