unpackaged/main/default/objects/Location__c/fields/ATS_Owned__c.field-meta.xml
<CustomField>
    <fullName>ATS_Owned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does ATS own this property</description>
    <label>ATS Owned?</label>
    <type>Checkbox</type>
</CustomField>