unpackaged/main/default/objects/Location__c/fields/Cost_Sq_Ft__c.field-meta.xml
<CustomField>
    <fullName>Cost_Sq_Ft__c</fullName>
    <label>Cost Sq. Ft.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>