unpackaged/main/default/objects/Location__c/fields/Facility_Manager__c.field-meta.xml
<CustomField>
    <fullName>Facility_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The active Facility Manager of this Location (if Warehouse)</description>
    <inlineHelpText>The active Facility Manager of this Location (if Warehouse)</inlineHelpText>
    <label>Facility Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ATS_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>