unpackaged/main/default/objects/Location__c/fields/FM_View__c.field-meta.xml
<CustomField>
    <fullName>FM_View__c</fullName>
    <description>Indicates if the current User is the Facility Manager</description>
    <formula>IF( Facility_Manager__r.Id = $User.Id , true, IF(Asst_Facility_Manager__r.Id = $User.Id,true,false))</formula>
    <inlineHelpText>Indicates if the current User is the Facility Manager</inlineHelpText>
    <label>FM View</label>
    <type>Checkbox</type>
</CustomField>