unpackaged/main/default/objects/Location__c/fields/Holds_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Holds_Inventory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Signifies if this location holds inventory/has a warehouse at the location</description>
    <label>Holds Inventory</label>
    <type>Checkbox</type>
</CustomField>