unpackaged/main/default/objects/Location__c/fields/Lease_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Lease_Expiration__c</fullName>
    <description>Date that current lease is signed through</description>
    <label>Lease Expiration</label>
    <type>Date</type>
</CustomField>