unpackaged/main/default/objects/Location__c/fields/Location_Note__c.field-meta.xml
<CustomField>
    <fullName>Location_Note__c</fullName>
    <label>Location Note</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>