unpackaged/main/default/objects/Location__c/fields/Location_Number__c.field-meta.xml
<CustomField>
    <fullName>Location_Number__c</fullName>
    <description>The location number of the office/site (not required but must be unique)</description>
    <externalId>true</externalId>
    <label>Location #</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>