unpackaged/main/default/objects/Location__c/fields/Office_Fax_Num__c.field-meta.xml
<CustomField>
    <fullName>Office_Fax_Num__c</fullName>
    <label>Office Fax #</label>
    <type>Phone</type>
</CustomField>