unpackaged/main/default/objects/Location__c/fields/Office_Sq_ft__c.field-meta.xml
<CustomField>
    <fullName>Office_Sq_ft__c</fullName>
    <label>Office Sq.ft</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>