unpackaged/main/default/objects/Location__c/fields/Order_Notification_Group__c.field-meta.xml
<CustomField>
    <fullName>Order_Notification_Group__c</fullName>
    <description>Email Address for Order Notifications (if blank we can email the FM when needed)</description>
    <label>Order Notification Group</label>
    <type>Email</type>
</CustomField>