unpackaged/main/default/objects/Location__c/fields/Over_Flow_Sq_Ft__c.field-meta.xml
<CustomField>
    <fullName>Over_Flow_Sq_Ft__c</fullName>
    <label>Over Flow Sq. Ft.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>