unpackaged/main/default/objects/Location__c/fields/OwnerView__c.field-meta.xml
<CustomField>
    <fullName>OwnerView__c</fullName>
    <formula>IF(  OwnerId  = $User.Id , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OwnerView</label>
    <type>Checkbox</type>
</CustomField>