unpackaged/main/default/objects/Location__c/fields/Parent_Location__c.field-meta.xml
<CustomField>
    <fullName>Parent_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For Trailers/Personal Stock, the Parent Warehouse Location for Planning</description>
    <inlineHelpText>For Trailers/Personal Stock, the Parent Warehouse Location for Planning</inlineHelpText>
    <label>Parent Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>ATS Locations</relationshipLabel>
    <relationshipName>ATS_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>