unpackaged/main/default/objects/Location__c/fields/Personal_Stock__c.field-meta.xml
<CustomField>
    <fullName>Personal_Stock__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this option if it is a non-warehouse location such as rep stock or trailer stock</inlineHelpText>
    <label>Personal Stock?</label>
    <type>Checkbox</type>
</CustomField>