unpackaged/main/default/objects/Location__c/fields/Phone_Account__c.field-meta.xml
<CustomField>
    <fullName>Phone_Account__c</fullName>
    <label>Phone Account #</label>
    <length>120</length>
    <type>Text</type>
</CustomField>