unpackaged/main/default/objects/Location__c/fields/Phone_Profiles_Ops__c.field-meta.xml
<CustomField>
    <fullName>Phone_Profiles_Ops__c</fullName>
    <inlineHelpText>The number of Operations contacts at this location that have Shoretel Telephony Profiles</inlineHelpText>
    <label>Phone Profiles (Ops)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>