unpackaged/main/default/objects/Location__c/fields/Phone_Profiles_Sales__c.field-meta.xml
<CustomField>
    <fullName>Phone_Profiles_Sales__c</fullName>
    <inlineHelpText>The number of sales contacts at this location that have Shoretel Telephony Profiles</inlineHelpText>
    <label>Phone Profiles (Sales)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>