unpackaged/main/default/objects/Location__c/fields/Primary_Office_Num__c.field-meta.xml
<CustomField>
    <fullName>Primary_Office_Num__c</fullName>
    <label>Primary Office #</label>
    <type>Phone</type>
</CustomField>