unpackaged/main/default/objects/Location__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Illinois</fullName>
            </value>
            <value>
                <fullName>Indiana</fullName>
            </value>
            <value>
                <fullName>Kentucky</fullName>
            </value>
            <value>
                <fullName>Michigan</fullName>
            </value>
            <value>
                <fullName>Missouri</fullName>
            </value>
            <value>
                <fullName>Ohio</fullName>
            </value>
            <value>
                <fullName>Pennsylvania</fullName>
            </value>
            <value>
                <fullName>Tennessee</fullName>
            </value>
            <value>
                <fullName>Wisconsin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>