unpackaged/main/default/objects/Location__c/fields/Related_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The &quot;Customer&quot; Account where Transfers to this Location will Appear (for Personal Stock/Trailers)</inlineHelpText>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Locations1</relationshipName>
    <type>Lookup</type>
</CustomField>