unpackaged/main/default/objects/Location__c/fields/RM_View__c.field-meta.xml
<CustomField>
    <fullName>RM_View__c</fullName>
    <formula>IF( Regional_Manager__r.Id =  $User.Id , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RM View</label>
    <type>Checkbox</type>
</CustomField>