unpackaged/main/default/objects/Location__c/fields/Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Sales Rep tied to this location (if personal stock)</inlineHelpText>
    <label>Sales Rep</label>
    <referenceTo>Sales_Rep__c</referenceTo>
    <relationshipName>Stock</relationshipName>
    <type>Lookup</type>
</CustomField>