unpackaged/main/default/objects/Location__c/fields/Sq_Footage__c.field-meta.xml
<CustomField>
    <fullName>Sq_Footage__c</fullName>
    <description>Square Footage of facility</description>
    <label>Total Sq. Footage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>