unpackaged/main/default/objects/Location__c/fields/Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>Tax_Rate__c</fullName>
    <description>Tax Rate for Pickup/Walkin Sales at this Location (used in eCommerce for Walk-In Orders)</description>
    <label>Tax Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>