unpackaged/main/default/objects/Location__c/fields/Toll_Free_Office_Num__c.field-meta.xml
<CustomField>
    <fullName>Toll_Free_Office_Num__c</fullName>
    <label>Toll Free Office #</label>
    <type>Phone</type>
</CustomField>