unpackaged/main/default/objects/Location__c/fields/Total_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Count__c</fullName>
    <label>Total On Hand</label>
    <summarizedField>Inventory__c.Qty_On_Hand__c</summarizedField>
    <summaryForeignKey>Inventory__c.Inventory_Site__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>