unpackaged/main/default/objects/Location__c/fields/WHSE_Sq_Ft__c.field-meta.xml
<CustomField>
    <fullName>WHSE_Sq_Ft__c</fullName>
    <label>WHSE Sq. Ft.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>