unpackaged/main/default/objects/Location__c/listViews/Admin_Warehouse_Locations.listView-meta.xml
<ListView>
    <fullName>Admin_Warehouse_Locations</fullName>
    <columns>NAME</columns>
    <columns>Location_Number__c</columns>
    <columns>Region__c</columns>
    <columns>Address_Line_2__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>Facility_Manager__c</columns>
    <columns>Regional_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Personal_Stock__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Holds_Inventory__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Address_Line_1__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Regional_Manager__c</field>
        <operation>contains</operation>
        <value>bennett</value>
    </filters>
    <label>Admin - Warehouse Locations</label>
    <sharedTo>
        <group>IT_Department</group>
    </sharedTo>
</ListView>