unpackaged/main/default/objects/Location__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Location_Number__c</columns>
    <columns>Regional_Manager__c</columns>
    <columns>Facility_Manager__c</columns>
    <columns>Holds_Inventory__c</columns>
    <columns>Personal_Stock__c</columns>
    <columns>Account__c</columns>
    <columns>Address_Line_1__c</columns>
    <columns>Address_Line_2__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>Zip_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>State__c</field>
        <operation>contains</operation>
    </filters>
    <label>All</label>
    <sharedTo>
        <group>IT_Department</group>
    </sharedTo>
</ListView>