unpackaged/main/default/objects/Location__c/listViews/ATS_Warehouse_Information.listView-meta.xml
<ListView>
    <fullName>ATS_Warehouse_Information</fullName>
    <columns>NAME</columns>
    <columns>Office_Sq_ft__c</columns>
    <columns>WHSE_Sq_Ft__c</columns>
    <columns>Over_Flow_Sq_Ft__c</columns>
    <columns>Sq_Footage__c</columns>
    <columns>Monthly_Rent__c</columns>
    <columns>Cost_Sq_Ft__c</columns>
    <columns>Lease_Expiration__c</columns>
    <columns>ATS_Owned__c</columns>
    <columns>Order_Notification_Group__c</columns>
    <columns>Primary_Office_Num__c</columns>
    <columns>Parent_Location__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Personal_Stock__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Holds_Inventory__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Address_Line_1__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>ATS Warehouse Information</label>
    <sharedTo>
        <group>ATS_Operations_Manager</group>
        <group>IT_Department</group>
    </sharedTo>
</ListView>