unpackaged/main/default/objects/Location__c/listViews/Personal_Stock_Trailers.listView-meta.xml
<ListView>
    <fullName>Personal_Stock_Trailers</fullName>
    <columns>NAME</columns>
    <columns>Location_Number__c</columns>
    <columns>Parent_Location__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>Sales_Rep__c</columns>
    <columns>Facility_Manager__c</columns>
    <columns>Regional_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Personal_Stock__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Holds_Inventory__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Location_Number__c</field>
        <operation>notEqual</operation>
        <value>PDX,MSC</value>
    </filters>
    <label>Personal Stock/Trailers</label>
    <sharedTo>
        <group>Facility_Managers</group>
        <group>IT_Department</group>
        <group>Purchasing_Department</group>
        <group>Regional_Managers</group>
        <role>HR_Manager</role>
        <role>Operations_Manager</role>
    </sharedTo>
</ListView>